--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-transition-group": "^2.5.3",
+    "react-test-renderer": "^16.8.1",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.1",
-    "redux-thunk": "^2.3.0",
-    "thunk": "0.0.1"
+    "redux-saga": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
