--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
   "name": "vs_v2",
   "version": "0.1.0",
+  "main": "index.js",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "jest -u",
+    "tester": "react-scripts test",
+    "dev": "parcel ./src/index.html",
+    "test:cover": "jest --coverage",
+    "open:coverage": "open ./coverage/lcov-report/index.html"
+  },
   "dependencies": {
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest-resolve": "^24.3.1",
     "node-sass": "^4.11.0",
-    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-test-renderer": "^16.8.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "jest": "^23.4.1",
+    "prop-types": "^15.7.2",
+    "identity-obj-proxy": "^3.0.0",
+    "react-test-renderer": "^16.8.1"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +46,15 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "babel": {
+    "presets": [
+      "env",
+      "stage-0"
+    ],
+    "plugins": [
+      "transform-react-jsx",
+      "transform-class-properties"
+    ]
+  }
 }
